Fix overflow

--- a/styles/sections/conf-statistics/conf-statistics.css
+++ b/styles/sections/conf-statistics/conf-statistics.css
@@ -5,6 +5,7 @@
   background-color: var(--page-background-color);
   position: relative;
   gap: 10vw;
+  overflow: hidden;
 }
 
 .conf-statistics::before {
@@ -22,8 +23,6 @@
   display: flex;
   padding-bottom: 1.67vw;
 }
-
-
 
 @media (max-width: 767px) {
   .conf-statistics {
